test/cases/compile_errors/invalid_underscore_placement_in_float_literal-7.zig
fn main() void {
    var bad: f128 = 1.0e-1_;
    _ = bad;
}

// error
// backend=stage2
// target=native
//
// :2:27: error: trailing digit separator
